src/objects/EFSheet__c.object
<CustomObject>
    <fields>
        <fullName>EFTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>EF Template</label>
        <referenceTo>EFTemplate__c</referenceTo>
        <relationshipLabel>EF Sheets</relationshipLabel>
        <relationshipName>EFSheets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>XSplit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>X Split</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YSplit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YSplit</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>EF Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EFTemplate__c</columns>
        <columns>XSplit__c</columns>
        <columns>YSplit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EF Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>